/*
 * $Id: Changelog,v 1.455 2005-11-04 21:26:59 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>

2005-11-04 19:30 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com.br>*/
  * source/wprint.c
    ! fix minor typo
  * utils/designer/resource/widgets.xml
    ! added some new properties( updated to hfrmtpml.prg to use this changes go tommorow)
  * samples/colrbloc.prg
    ! updated

2005-11-04 06:30 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  * source/procmisc/Makefile
    * added include path for guilib.h

2005-11-03 22:45 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * include/guilib.h
    * Added macroses HB_RETHANDLE(h), HB_PARHANDLE( n ), HB_STOREHANDLE( h, n ),
      HB_PUTHANDLE( i, h ), HB_GETHANDLE( i ), provided by Przemyslaw Czerpak
  * gtk/menu.prg
  * gtk/menu_c.c
    * IsEnabledMenuItem() has been implemented
  * gtk/commond.c
    ! Small fix
  * gtk/*.c
    * Macroses from guilib.h are used instead of 
      #ifdef GTK_USE_POINTER ... #else ...
    * #ifdef __EXPORT__ ... is removed to guilib.h
  * source/*.c
    * #ifdef __EXPORT__ ... is removed to guilib.h
    ( thanks for advices to Przemyslaw Czerpak )


2005-11-03 15:50 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * gtk/menu.prg
  * gtk/menu_c.c
    * EnableMenuItem() has been implemented
  * gtk/control.c
  * gtk/hcontrol.prg
  * gtk/hpanel.prg
  * gtk/window.c
    ! Some fixes, related to widget move
  * gtk/samples/dbview.prg
  * samples/dbview.prg
    * Significantly extended

2005-11-01 18:50 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  * source/c_ipaddr.c
  * source/commond.c
  * source/control.c
  * source/draw.c
  * source/drawtext.c
  * source/grid.c
  * source/media_c.c
  * source/message.c
  * source/misc.c
  * source/nice.c
  * source/prnalone.c
  * source/shellapi.c
  * source/window.c